# cake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  about.cc  about.h  admin.rc  candyitem.cc  candyitem.h  candylist.cc  candylist.h  confirmdialog.cc  confirmdialog.h  define.h  detailarea.cc  detailarea.h  feedback.cc  feedback.h  framelessdialog.cc  framelessdialog.h  images.qrc  keepalive.cc  keepalive.h  main.cc  mainwindow.cc  mainwindow.h  setup.iss  setup.iss.in  startoption.cc  startoption.h  style.qss  switchbutton.cc  switchbutton.h  titlebar.cc  titlebar.h  update.cc  update.h  winqtcollect.sh
.github/workflows/: check.yaml  release.yaml
